# wallpapers

./: .gitignore  LICENSE  README.md  file_tree.py  make_gallery.py  pyproject.toml  readme_thumbnails.py  requirements.txt
.github/workflows/: readme_thumbnail_cicd.yml
tests/: test_readme_thumbnails.py  test_readme_thumbnails.py~
