[tool.poetry]
name = "wallpapers"
version = "0.1.0"
description = "Wallpaper repository"
authors = ["Gaelan Venturi <hey@venturi.simplelogin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
